# dj-serve

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
src/dj_serve/: __init__.py  config.py  middleware.py  views.py
src/dj_spa/: __init__.py  config.py  middleware.py  views.py
tests/: conftest.py  test_async.py  test_config.py  test_dj_serve.py  test_dj_spa.py  test_e2e.py  test_middleware.py
