[project]
name = "dj-spa"
version = "0.1.0"
description = "Serve SPAs (Vue, React, Angular, vanilla HTML) directly from Django"
readme = "README.md"
authors = [
    { name = "Ricardo Robles", email = "ricardo.r.f@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = ["django>=4.0"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/ricardorobles/dj-spa"
Repository = "https://github.com/ricardorobles/dj-spa"
Issues = "https://github.com/ricardorobles/dj-spa/issues"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8", "pytest-django>=4"]
