[project]
name = "dj-spa"
version = "1.0.0"
description = "Serve SPAs (Vue, React, Angular, vanilla HTML) directly from Django"
readme = "README.md"
keywords = ["django", "spa", "static", "vue", "react", "angular", "frontend"]
authors = [
    { name = "Ricardo Robles", email = "ricardo.r.f@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = ["django>=4.0"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Django :: 6.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/rroblf01/dj-spa"
Repository = "https://github.com/rroblf01/dj-spa"
Issues = "https://github.com/rroblf01/dj-spa/issues"

[project.optional-dependencies]
async = ["aiofiles>=23.0"]
dev = ["pytest>=8", "pytest-django>=4", "pytest-asyncio>=0.23", "ruff==0.15.20", "ty==0.0.56", "django-stubs>=5"]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8", "pytest-django>=4", "pytest-asyncio>=0.23", "ruff==0.15.20", "ty==0.0.56", "django-stubs>=5", "aiofiles>=23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
